<resources>
    <string name="app_name">To do list</string>
    <string name="priority">Priorité : </string>
    <string name="sunday">Dimanche</string>
    <string name="monday">Lundi</string>
    <string name="tuesday">Mardi</string>
    <string name="wednesday">Mercredi</string>
    <string name="thusday">Jeudi</string>
    <string name="friday">Vendredi</string>
    <string name="saturday">Samedi</string>
    <string name="add_todo">Nouvelle tache</string>
    <string name="bt_add">Ajouter</string>
    <string name="title_add">Ajouter une nouvelle tache</string>
    <string name="high">Urgent</string>
    <string name="middle">Normal</string>
    <string name="low">à voir</string>
    <string name="tv_empty">Rien a faire ;)</string>
    <string name="toaster_add">Element ajouté à la liste</string>
    <string name="tv_priority">Priorité</string>
    <string name="caterory">Catégorie</string>
    <string name="add_new_cat">Nouvelle catégorie</string>
    <string name="label_name_category">Ajouter une catégorie</string>
    <string name="dialog_btn_add">Ajouter</string>
    <string name="dialog_btn_cancel">Annuler</string>
</resources>