<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ActivityAdd">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/title_add"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="30dp"
        />

    <EditText
        android:id="@+id/et_newtodo"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/add_todo"
        android:padding="10dp"
        android:textSize="20sp"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        android:layout_marginTop="30dp"/>


    <LinearLayout
        android:id="@+id/ll_priority"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_newtodo"
        android:layout_marginTop="20dp"
        android:paddingHorizontal="50dp"
        android:weightSum="10">

        <TextView
            android:id="@+id/tv_spinner"
            android:layout_width="wrap_content"
            android:minWidth="100dp"
            android:layout_height="wrap_content"
            android:text="@string/tv_priority"
            android:textSize="20sp"
            android:textColor="@color/app_theme"
            android:layout_weight="3"
        />

        <Spinner
            android:id="@+id/sp_priority"
            android:layout_width="wrap_content"
            android:layout_height="25dp"
            android:minWidth="150dp"
            android:spinnerMode="dropdown"
            android:layout_weight="7"
        />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_category"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ll_priority"
        android:layout_marginTop="20dp"
        android:paddingHorizontal="50dp"
        android:weightSum="10">

        <TextView
            android:id="@+id/tv_category"
            android:layout_width="wrap_content"
            android:minWidth="100dp"
            android:layout_height="wrap_content"
            android:text="@string/caterory"
            android:textSize="20sp"
            android:textColor="@color/app_theme"
            android:layout_weight="3"
            />

        <Spinner
            android:id="@+id/sp_category"
            android:layout_width="wrap_content"
            android:layout_height="25dp"
            android:minWidth="150dp"
            android:spinnerMode="dropdown"
            android:layout_weight="7"
            />

    </LinearLayout>

    <Button
        android:id="@+id/bt_add"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:text="@string/bt_add"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ll_category" />

</androidx.constraintlayout.widget.ConstraintLayout>